tests/build/cases/widget/invalid_properties_item.stderr
error: expected property or when
 --> cases/widget/invalid_properties_item.rs:8:9
  |
8 |         {}
  |         ^
